tests/parse/fail/illegal-11.dcf
import a;

void main(){}

// Should be illegal
import b;
